--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,3 +1,6 @@
+
+version: '3.9'
+
 services:
   postgres:
     image: postgres:15
@@ -11,6 +14,8 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
 volumes:
   pgdata:
+
